k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: version-service
spec:
  type: LoadBalancer
  selector:
    app: version-app
    env: main
  ports:
    - port: 80
      targetPort: 3000
